update: fixed warnings and added last location nbt